// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter menu card render tests Renders MenuCard with the dropdown icon Closed 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text>
      Menu Card Title
    </Text>
    <Text
      style={
        Object {
          "color": "#9e9e9e",
          "fontSize": 12,
        }
      }
    >
      Sub Text Closed
    </Text>
  </View>,
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <Icon
      color="#616161"
      name="keyboard-arrow-down"
      size={25}
    />
  </View>,
]
`;

exports[`Filter menu card render tests Renders MenuCard with the dropdown icon Open 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text>
      Menu Card Title
    </Text>
    <Text
      style={
        Object {
          "color": "#9e9e9e",
          "fontSize": 12,
        }
      }
    >
      Sub Text Opened
    </Text>
  </View>,
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  >
    <Icon
      color="#616161"
      name="keyboard-arrow-up"
      size={25}
    />
  </View>,
]
`;
